--- a/ivy.xml
+++ b/ivy.xml
@@ -43,6 +43,9 @@
         <dependency org="org.jocean" name="jocean-idiom" rev="0.0.8-SNAPSHOT" 
             conf="compile->default(*)" changing="true"/>
        
+        <dependency org="org.jocean" name="jocean-image" rev="0.0.1-SNAPSHOT" 
+            conf="compile->default(*)" changing="true"/>
+        
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.6" 
             conf="compile->default(*)"/>
         
