--- a/ivy.xml
+++ b/ivy.xml
@@ -44,7 +44,7 @@
             conf="compile->default(*)" changing="true"/>
        
         <dependency org="org.jocean" name="jocean-image" rev="0.0.1-SNAPSHOT" 
-            conf="compile->default(*)" changing="true"/>
+            conf="compile->default(*)" changing="true" transitive="false"/>
         
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.6" 
             conf="compile->default(*)"/>
