--- a/ivy.xml
+++ b/ivy.xml
@@ -40,14 +40,15 @@
     </publications>
     <dependencies>
     
-        <dependency org="org.jocean" name="jocean-idiom" rev="0.0.8-SNAPSHOT" 
-            conf="compile->default(*)" changing="true"/>
-       
-        <dependency org="org.jocean" name="jocean-image" rev="0.0.1-SNAPSHOT" 
-            conf="compile->default(*)" changing="true" transitive="false"/>
-        
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.6" 
             conf="compile->default(*)"/>
+        
+        <dependency org="org.jocean" name="jocean-idiom" rev="0.0.8" 
+            conf="compile->default(*)"/>
+       
+        <dependency org="org.jocean" name="jocean-image" rev="0.0.1" 
+            conf="compile->default(*)"/>
+        
         
 	</dependencies>
 </ivy-module>
